--- a/css/main/default.css
+++ b/css/main/default.css
@@ -39,6 +39,7 @@
     width: 100%;
     height: 750px;
     z-index: 0;
+    -webkit-transform: translate3d(0, 0, 0);
     background: #ffffff;
     background: -moz-linear-gradient(top, #ffffff 0%, #f8f8f8 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#f8f8f8));
